--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DUMBWAYS BLOG</title>
-    <link rel="stylesheet" href="/Day 4/Task 4/contact.css">
+    <link rel="stylesheet" href="/contact.css">
+
 </head>
 
 <body>
@@ -15,14 +16,14 @@
                     <a href="/Day 4/Task 4/index.html">
                         <img
                         class="home-logo"
-                        src="/Day 4/Task 4/Assets/Icon/Logo-DumbWays.png" 
+                        src="/Assets/Icon/Logo-DumbWays.png" 
                         alt="image here">
                     </a>
                     
                     <!-- <a href="/Day 4/Task 4/Home-DB.html">Home</a> -->
                 </li>
                 <li>
-                    <a href="/Day 4/Task 4/my-project.html">My Project</a>
+                    <a href="/my-project.html">My Project</a>
                 </li>
             </ul>
         </div>
@@ -33,7 +34,7 @@
 
         <div class="right">
             <button class="button-1">
-                <a style="text-decoration: none"; href="/Day 4/Task 4/contact.html">
+                <a style="text-decoration: none"; href="/contact.html">
                     <p class="button-p">
                         Contact Me
                     </p>
@@ -46,7 +47,7 @@
         <div>
             <img 
             class="background" 
-            src="/Day 4/Task 4/Assets/Images/3274408.jpg" 
+            src="/Assets/Images/3274408.jpg" 
             alt="image">
         </div>
     </section>
