--- a/my-project.html
+++ b/my-project.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLog</title>
-    <link rel="stylesheet" href="/Day 4/Task 4/my-project.css">
-    <link rel="stylesheet" href="/Day 4/Task 4/contact.css">
+    <link rel="stylesheet" href="/my-project.css">
+    <link rel="stylesheet" href="/contact.css">
 </head>
 <body class="first-body">
     <nav>
         <div class="left">
             <ul>
                 <li>
-                    <a href="/Day 4/Task 4/index.html">
+                    <a href="/index.html">
                         <img
                         class="home-logo"
-                        src="/Day 4/Task 4/Assets/Icon/Logo-DumbWays.png" 
+                        src="/Assets/Icon/Logo-DumbWays.png" 
                         alt="image here">
                     </a>
                     
                     <!-- <a href="/Day 4/Task 4/Home-DB.html">Home</a> -->
                 </li>
                 <li>
-                    <a href="/Day 4/Task 4/my-project.html">My Project</a>
+                    <a href="/my-project.html">My Project</a>
                 </li>
             </ul>
         </div>
@@ -187,7 +187,7 @@
     <!-- CARD -->
         <div class="card">
             <img class="card-image"
-            src="/Day 4/Task 4/Assets/Images/pencil.jpg" 
+            src="/Assets/Images/pencil.jpg" 
             alt="image"
             >
             
@@ -245,6 +245,6 @@
     </div>
     </div>
 
-   <script src="/Day 4/Task 4/my-project.js"></script>
+   <script src="/my-project.js"></script>
 </body>
 </html>
