--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous" 
     referrerpolicy="no-referrer" 
     />
-    <link rel="stylesheet" href="/Day 4/Task 4/contact.css">
+    <link rel="stylesheet" href="/contact.css">
 
 </head>
 <body>
@@ -20,17 +20,17 @@
         <div class="left">
             <ul>
                 <li>
-                    <a href="/Day 4/Task 4/index.html">
+                    <a href="/contact.html">
                         <img
                         class="home-logo"
-                        src="/Day 4/Task 4/Assets/Icon/Logo-DumbWays.png" 
+                        src="/Assets/Icon/Logo-DumbWays.png" 
                         alt="image here">
                     </a>
                     
                     <!-- <a href="/Day 4/Task 4/Home-DB.html">Home</a> -->
                 </li>
                 <li>
-                    <a href="/Day 4/Task 4/my-project.html">My Project</a>
+                    <a href="/my-project.html">My Project</a>
                 </li>
             </ul>
         </div>
@@ -41,7 +41,7 @@
 
         <div class="right">
             <button class="button-1">
-                <a style="text-decoration: none"; href="/Day 4/Task 4/contact.html">
+                <a style="text-decoration: none"; href="/contact.html">
                     <p class="button-p">
                         Contact Me
                     </p>
